fix: Images not showing because they were linked wrong. Rewrote the links.

--- a/styles/_aboutus.scss
+++ b/styles/_aboutus.scss
@@ -1,13 +1,13 @@
 .about-us {
   min-height: 100vh;
   background: $secondary; /* fallback */
-  background-image: url("/img/About.jpg"); /* fallback */
+  background-image: url("img/About.jpg"); /* fallback */
   background-image: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0.8) 0%,
       rgba(0, 0, 0, 0) 100%
     ),
-    url("/img/About.jpg");
+    url("img/About.jpg");
   background-size: cover;
   background-position: center;
 }
