--- a/styles/_homepage.scss
+++ b/styles/_homepage.scss
@@ -1,13 +1,13 @@
 .homepage {
   min-height: 100vh;
   background: $secondary; /* fallback */
-  background-image: url("/img/LandingPage.jpg"); /* fallback */
+  background-image: url("img/LandingPage.jpg"); /* fallback */
   background-image: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0.8) 0%,
       rgba(0, 0, 0, 0) 100%
     ),
-    url("/img/LandingPage.jpg");
+    url("img/LandingPage.jpg");
   background-size: cover;
   background-position: center;
 }
